@@ -1,3 +1,8 @@
+2000-05-21  Jacob Berkman  <jacob@helixcode.com>
+
+	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): use -m
+	for xalf, so that it works with my netscape 3
+
 Fri May 19 22:33:09 2000  George Lebl <jirka@5z.com>
 
 	* gnome-url.c: use poptParseArgvString to parse the handler and
